Fix Перенос строки в Signature